[hotfix][docs] Fix IDE setup typo